server/public/styles.css
.fa-tree-1 {
  left: 8px;
  top: 7px;
  color: white;
}

.fa-tree-2 {
  left: 16px;
  top: 12px;
}

.fa-tree-3 {
  left: 16px;
  top: 12px;
}

.button-search {
  right: 0.1px;
  top: 0.1px;
  color: #b0b0b0;
  border: 90px solid #b0b0b0;
}

.border-radius-20px {
  border-radius: 20px;
}

.border-radius-90px {
  border-radius: 90px;
}

.w-60 {
  width: 60%;
}

.h-40px {
  height: 40px;
}

.text-brown {
  color: #c26f30;
}

.text-gray {
  color: #b0b0b0;
}

::placeholder {
  color: #b0b0b0;
}

img {
  object-fit: cover;
  height: 230px;
  width: 150px;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #f6f9f9;
  height: 5%;
}

